--- a/style.css
+++ b/style.css
@@ -2,12 +2,12 @@
   padding: 0;
   margin: 0;
   box-sizing: border-box;
-  font-family: 'Poppins';
+  font-family: 'Outfit', sans-serif ;
 }
 
 .hero{
   height: 100vh;
-  background-color: #0096FF;
+  background-color: blue;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -18,19 +18,41 @@
 h1{
   font-size: 4rem;
   font-weight: 500;
+  text-shadow: 2px 2px 2px black;
   margin-bottom: 20px; 
+  font-family: 'Lemon', sans-serif;
+  text-align: center;
 }
 
 .timebox{
   display: flex;
-  gap: 90px;
+  flex-wrap: wrap;
+  gap: 20px;
 }
 
+
 .time{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
   text-align: center;
+
 }
 
 .time h2{
   font-size: 5rem;
+  line-height: 7rem;
   font-weight: 100;
+  background-color: white;
+  width: 120px;
+  height: 120px;
+  align-self: center;
+  color: black;
+  border: 2px solid black;
+  border-radius: 10px;
+}
+
+.time p{
+  margin-top: 10px;
 }
